[gd_scene load_steps=4 format=3 uid="uid://dawi13xg8symk"]

[ext_resource type="Script" path="res://Scripts/tactics.gd" id="1_3j27d"]
[ext_resource type="Theme" uid="uid://c11d3cj1ea56o" path="res://Themes/tactics_theme.tres" id="1_j1ltr"]
[ext_resource type="LabelSettings" uid="uid://ddcb7kmaryg2c" path="res://Themes/Title_settings.tres" id="2_jdawk"]

[node name="Tactics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3j27d")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_j1ltr")

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -127.0
offset_right = 127.0
offset_bottom = 91.0
grow_horizontal = 2
text = "Tactics"
label_settings = ExtResource("2_jdawk")

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.5
offset_top = -70.0
offset_right = 33.5
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Pitch" type="ColorRect" parent="Panel"]
custom_minimum_size = Vector2(820, 550)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.231373, 1, 0.117647, 1)

[node name="TacticGrid" type="GridContainer" parent="Panel/Pitch"]
custom_minimum_size = Vector2(650, 480)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -240.0
offset_right = 325.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 32
columns = 5

[node name="FormationList" type="ItemList" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -160.0
offset_right = 190.0
offset_bottom = -120.0
grow_vertical = 2
theme = ExtResource("1_j1ltr")
auto_height = true
item_count = 2
item_0/text = "4-4-2"
item_1/text = "4-5-1"

[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="item_selected" from="Panel/FormationList" to="." method="_on_formation_list_item_selected"]
